# rust-wasm-grpc-http3

./: .env  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.container/router/: Caddyfile
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.devcontainer/api/: Dockerfile
.devcontainer/client_artifact/: Dockerfile
.devcontainer/router/: Caddyfile
.devcontainer/rust/: Dockerfile
.docs/context/: architecture.md  dev-setup.md  docker-compose-naming-standards.md  makefile-standards.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  issue-id-generation.yml  lint-pr-title.yml
api/: Cargo.toml  build.rs
api/src/: main.rs
app/: Cargo.toml  build.rs  index.html
app/src/: lib.rs
client_artifact/: Cargo.toml  build.rs  config.toml  index.html
client_artifact/src/: lib.rs  request_utils.rs  stats_panel.rs
proto/: ping.proto
